--- a/Prasatec.Apps.Testing/Prasatec.Apps.Testing.csproj
+++ b/Prasatec.Apps.Testing/Prasatec.Apps.Testing.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Server.cs" />
     <None Include="NewFolder1\Program - Copy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
